--- a/app/Resources/FOSUserBundle/views/layoutLight.html.twig
+++ b/app/Resources/FOSUserBundle/views/layoutLight.html.twig
@@ -3,7 +3,7 @@
 {% block pageHeader %}
     <div class="page-header">
         <div class="container">
-            <h2 class="color3">Bienvenue sur e-educmaster.com</h2>
+            <h2 class="color3">Bienvenue sur la plateforme de l'AFADEC</h2>
             <ul class="breadcrumb">
                 <li class="color3">Réinitialiser son mot de passe</li>
             </ul>
