--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -497,7 +497,7 @@
                                                         </div>
 
                                                         <div class="col-xs-2 text-right">
-                                                            <a target="_blank" class="btn btnLien btn-sm btn-warning" href="{{ path('chat', {id: valR.id}) }}">
+                                                            <a class="btn btnLien btn-sm btn-warning" href="{{ path('chat', {id: valR.id}) }}">
                                                                 <i class="fa fa-comments-o" aria-hidden="true"></i>
                                                             </a>
                                                         </div>
