--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block titrePage %}Bienvenue sur e-educmaster.com{% endblock %}
-{% block sousTitrePage %}E‐former les formateurs{% endblock %}
+{% block titrePage %}Bienvenue sur la plateforme de l'AFADEC{% endblock %}
+{% block sousTitrePage %}Association pour la Formation A Distance de l'Enseignement Catholique{% endblock %}
 
 {% block vueAdmin %}
     {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
