--- a/app/Resources/views/pagesFixes/afadecContent.html.twig
+++ b/app/Resources/views/pagesFixes/afadecContent.html.twig
@@ -49,7 +49,7 @@
 
 <div class="process-1 mt-0 pt-60 pb-60" data-parallax="scroll" data-image-src="{{ asset('educomp/images/cta-background.jpg') }}">
     <div class="container">
-        <p class="inverse">Tous ceux qui veulent préparer un concours de recrutement pour l’enseignement primaire ou secondaire peuvent bénéficier des formations à distance dispensées sur le site e-educmaster.com Ces formations sont conçues par l’AFADEC à destination des étudiants des établissements (universités catholiques et instituts de formation rattachés) préparant un Master MEEF et souhaitant compléter leur formation par des cours à distance, notamment :</p>
+        <p class="inverse">Tous ceux qui veulent préparer un concours de recrutement pour l’enseignement primaire ou secondaire peuvent bénéficier des formations à distance dispensées sur le site afadec.fr Ces formations sont conçues par l’AFADEC à destination des étudiants des établissements (universités catholiques et instituts de formation rattachés) préparant un Master MEEF et souhaitant compléter leur formation par des cours à distance, notamment :</p>
         <ul class="list-default inverse">
             <li>À tous les étudiants préparant le concours de recrutement de professeurs des écoles (CRPE) ;</li>
             <li>À tous les étudiants préparant les concours de recrutement de professeurs certifiés (CAPES/CAFEP) dans l’une des 7 discpiplines portées par la plateforme (mathématiques, lettres modernes, histoire-géographie, anglais, espagnol, SVT et physique-chimie);</li>
