--- a/app/Resources/views/pagesFixes/cookies.html.twig
+++ b/app/Resources/views/pagesFixes/cookies.html.twig
@@ -3,7 +3,7 @@
 {% block pageHeader %}
     <div class="page-header">
         <div class="container">
-            <h2 class="color3">Cookies</h2>
+            <h2 class="color3">Mentions légales</h2>
             <ul class="breadcrumb">
                 <li class="color3">Information</li>
             </ul>
@@ -12,9 +12,20 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container mt-100 mb-80">
+    <div class="container mt-100 mb-80 cookiesIHM">
         <div class="row">
             <div class="col-sm-12">
+                <p>
+                    L'AFADEC (Association de la Formation A Distance de l'Enseignement Catholique) administre cette plateforme, dont l'objectif est d'accompagner la préparation au concours CAPES/CAFEP des étudiants inscrits dans les masters Métiers de l'éducation des universités et instituts catholiques.
+
+                    Les informations recueillies (nom, prénom, discipline, adresse mail, lieu d'inscription, année de Master) sont nécessaires pour votre inscription.
+
+                    Elles font l'objet d'un traitement informatique et sont destinées au secrétariat de l'association.
+
+                    En application des articles 39 et suivants de la loi du 6 janvier 1978 modifiée, vous bénéficiez d'un droit d'accès et de rectification aux informations qui vous concernent.
+
+                    Si vous souhaitez exercer ce droit et obtenir communication des informations vous concernant, veuillez vous adresser à : contact.AFADEC@gmail.com
+                </p>
                 <h3 class="heading"><span class="color2">www.afadec.fr</span> implante des cookies dans votre ordinateur :</h3>
                 <ul class="list-styled">
                     <li>
