--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -3,9 +3,9 @@
 {% block pageHeader %}
     <div class="page-header">
         <div class="container">
-            <h2 class="color3">Bienvenue sur e-educmaster.com</h2>
+            <h2 class="color3">Bienvenue sur la plateforme de l'AFADEC</h2>
             <ul class="breadcrumb">
-                <li class="color3">E‐former les formateurs</li>
+                <li class="color3">Association pour la Formation A Distance de l'Enseignement Catholique</li>
             </ul>
         </div>
     </div>
