--- a/app/Resources/views/emailing.html.twig
+++ b/app/Resources/views/emailing.html.twig
@@ -12,11 +12,48 @@
 {% endblock %}
 
 {% block main %}
+    <script src="{{ asset('vendors/jquery-ui/jquery-ui.min.js') }}" type=text/javascript></script>
+    <script src="{{ asset('vendors/ckeditor/ckeditor.js') }}"></script>
+    <script src="{{ asset('vendors/ckeditor/adapters/jquery.js') }}"></script>
+    {% include 'forum/commonJs.html.twig' %}
     <script>
         jQuery(document).ready(function () {
             $('.usrEmailing').click(function(){
-                var checkbox = $(this).closest('.usrEmailingRow').find('.checkUserEmailing');
-                checkbox.trigger('click');
+                var checkbox = $(this).closest('.usrEmailingRow').find('.checkUserEmailing').trigger('click');
+            });
+
+            $('.btnApplyFiltersEmailing').click(function(){
+                $('.checkFiltreEmailing:checked').each(function(){
+                    if($(this).closest('.usersSubscribedSession').length){
+
+                    }else if($(this).closest('.usersNotSubscribedSession').length){
+
+                    }
+                });
+            });
+
+            $('.btnSendMsg').click(function(){
+                var objet = $('#emailingSujet').val();
+                var message = CKEDITOR.instances['emailingTexte'].getData();
+                var users = [];
+                $('.checkUserEmailing:checked').each(function(){
+                   users.push($(this).closest('.usrEmailingRow').find('.usrEmailing').attr('data-userId'));
+                });
+                console.log('test')
+                $.ajax({
+                    type: 'POST',
+                    url: "{{path('emailingSendMail_ajax')}}",
+                    async: false,
+                    dataType: "json",
+                    data: {
+                        objet: objet,
+                        message: message,
+                        users: users
+                    },
+                    success: function (data) {
+
+                    }
+                });
             });
         });
     </script>
@@ -24,14 +61,38 @@
     <div class="container mt-100 mb-40">
         <div class="row emailingIHM">
             <div class="col-xs-8 colReglages">
-                <div class="filtreEmailingRow">
-                    <input class="checkFiltreEmailing" type="checkbox" />
-                    <div class="filtreEmailing">Tous les utilisateurs inscrits à une session</div>
-                    <select class="selectpicker col-xs-6" data-style="MyBtnSelectPickeer" title="Choisir une session" multiple>
-                        {% for key,val in sessions %}
-                            <option title="{{ val.nom }}" class="addNewItem addFiltredSession">{{ val.nom }}</option>
-                        {% endfor %}
-                    </select>
+                <div class="filtreEmailingRow row usersSubscribedSession">
+                    <div class="col-sm-6">
+                        <input class="checkFiltreEmailing" type="checkbox" />
+                        <div class="filtreEmailing">Tous les utilisateurs inscrits à une session</div>
+                    </div>
+                    <div class="col-sm-6">
+                        <select class="selectpicker col-xs-6" data-style="MyBtnSelectPickeer" title="Choisir une session" multiple>
+                            {% for key,val in sessions %}
+                                <option title="{{ val.nom }}" class="addNewItem addFiltredSession">{{ val.nom }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="filtreEmailingRow row usersNotSubscribedSession">
+                    <div class="col-sm-6">
+                        <input class="checkFiltreEmailing" type="checkbox" />
+                        <div class="filtreEmailing">Tous les utilisateurs non inscrits à une session</div>
+                    </div>
+                    <div class="col-sm-6">
+                        <select class="selectpicker col-xs-6" data-style="MyBtnSelectPickeer" title="Choisir une session" multiple>
+                            {% for key,val in sessions %}
+                                <option title="{{ val.nom }}" class="addNewItem addFiltredSession">{{ val.nom }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-group text-center">
+                            <a class="btn btn-primary btn-sm btnApplyFiltersEmailing">Appliquer les filtres</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-xs-4 colUsersFiltres">
@@ -41,6 +102,23 @@
                         <div class="usrEmailing" data-userId="{{ val.id }}">{{ val.firstname }} {{ val.lastname }}</div>
                     </div>
                 {% endfor %}
+            </div>
+        </div>
+        <div class="row emailingMSG">
+            <div class="col-sm-12">
+                <div class="form-group">
+                    <input type="text" id="emailingSujet" />
+                    <label for="emailingSujet">Objet*</label>
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control simpleEditor" id="emailingTexte"></textarea>
+                    <label for="emailingTexte">Message*</label>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="form-group text-center">
+                    <a class="btn btn-primary btn-sm btnSendPost"><i class="btnSendMsg fa fa-paper-plane-o" aria-hidden="true"></i></a>
+                </div>
             </div>
         </div>
     </div>
