--- a/app/Resources/views/pagesFixes/concours.html.twig
+++ b/app/Resources/views/pagesFixes/concours.html.twig
@@ -16,65 +16,50 @@
         <div class="row">
             <div class="col-sm-7 text-justify">
                 <h2>LE CRPE ET LE CAFEP</h2>
-                <p><b>Les concours externes de recrutement de professeur des écoles (CRPE)</b> pour enseigner dans l’enseignement privé catholique sont spécifiques à l’enseignement privé mais avec les mêmes épreuves, le même programme et le même calendrier que pour l’enseignement public.</p>
-                <p>Le CRPE externe <b>s’adresse aux étudiants inscrits en master 1 ou master 2 </b>ainsi qu’aux personnes qui remplissent les conditions pour s’inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
+                <p><b>Les concours externes de recrutement de professeur des écoles (CRPE)</b> pour enseigner dans l’enseignement privé catholique sont spécifiques à l’enseignement privé  mais avec les mêmes épreuves, le même programme et le même calendrier que pour l’enseignement public.</p>
+                <p>Le CRPE externe <b>s’adresse aux étudiants inscrits en master 1 ou master 2</b> ainsi qu’aux personnes qui remplissent les conditions pour s’inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
                 <p>Le concours se déroule en deux étapes : l’admissibilité et l’admission.</p>
-                <p>Pour voir le descriptif des épreuves du CRPE externe cliquez sur le lien.</p>
-                <p><b>Le concours externe du privé</b> pour enseigner dans les collèges et lycées de l’enseignement privé sous contrat <b>s’appelle le Cafep</b> : Certificat d’aptitude aux fonctions d’enseignement dans les établissements privés sous contrat du 2<sup>nd </sup>degré. Il est l’équivalent du Capes dans le public. Il s’agit du même concours pour le public et pour le privé. C’est au moment de s’inscrire que l’on opte pour l’enseignement privé.</p>
-                <p>Le Cafep concours externe, <b>s’adresse aux étudiants inscrits en master 1 ou master 2 </b>ainsi qu’aux personnes qui remplissent les conditions pour s’inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent)</p>
+                <p><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98653/les-epreuves-crpe-externe-troisieme-crpe-second-crpe-interne.html">Pour voir le descriptif des épreuves du CRPE externe cliquez sur le lien.</a></p>
+                <p><b>Le concours externe du privé</b> pour enseigner dans les collèges et lycées de l’enseignement privé sous contrat <b>s’appelle le Cafep</b> : Certificat d’aptitude aux fonctions d’enseignement dans les établissements privés sous contrat du 2nd degré. Il est l’équivalent du Capes dans le public. Il s'agit du même concours pour le public et pour le privé. C'est au moment de s’inscrire que l’on opte pour l'enseignement privé.</p>
+                <p>Le Cafep concours externe, <b>s’adresse aux étudiants inscrits en master 1 ou master 2</b> ainsi qu'aux personnes qui remplissent les conditions pour s'inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
                 <h5 class="color2">Quelles sont les épreuves ?</h5>
                 <ul class="list-default">
-                    <li>Les épreuves du Cafep d’histoire-géographie</li>
-                    <li>Les épreuves du Cafep d’anglais</li>
-                    <li>Les épreuves du Cafep d’espagnol</li>
-                    <li>Les épreuves du Cafep de mathématiques</li>
-                    <li>Les épreuves du Cafep de lettres</li>
-                    <li>Les épreuves du Cafep de SVT</li>
-                    <li>Les épreuves du Cafep de physique-chimie</li>
+                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98581/les-epreuves-du-capes-externe-et-du-cafep-capes-section-histoire-et-geographie.html">Les épreuves du Cafep d’histoire-géographie</a></li>
+                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98575/les-epreuves-du-capes-externe-et-du-cafep-capes-section-langues-vivantes-etrangeres.html">Les épreuves du Cafep d’anglais</a></li>
+                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98575/les-epreuves-du-capes-externe-et-du-cafep-capes-section-langues-vivantes-etrangeres.html">Les épreuves du Cafep d’espagnol</a></li>
+                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98572/les-epreuves-du-capes-externe-et-du-cafep-capes-section-mathematiques.html">Les épreuves du Cafep de mathématiques</a></li>
+                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98573/les-epreuves-du-capes-externe-et-du-cafep-capes-section-lettres.html">Les épreuves du Cafep de lettres</a></li>
+                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98569/les-epreuves-du-capes-externe-et-du-cafep-capes-section-sciences-de-la-vie-et-de-la-terre.html">Les épreuves du Cafep de SVT</a></li>
+                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98570/les-epreuves-du-capes-externe-et-du-cafep-capes-section-physique-chimie.html">Les épreuves du Cafep de physique-chimie</a></li>
                 </ul>
-                <p>Les concours d’enseignement sont travaillés dans le cadre des masters MEEF de l’Enseignement catholique (conçus et réalisés par les universités et instituts catholiques et les instituts supérieurs de formation de l’Enseignement catholique - Isfec) qui préparent aux métiers de l’enseignement, de l’éducation et de la formation.</p>
+            </div>
+            <div class="col-sm-5">
+                {% include "pagesFixes/nousContacter.html.twig" %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-justify">
+                <h5 class="mt-40 mb-20 color2">Où préparer les concours ?</h5>
+                <p>Les concours d’enseignement peuvent être préparés dans <a class="studitBlueFC" href="https://enseignement-catholique.fr/comment-se-former">les instituts de formation de l’enseignement catholique</a>. Adossés aux universités catholiques ils proposent des Master MEEF et une formation de qualité.</p>
                 <h5 class="mt-40 mb-20 color2">Pré-accord puis accord sont obligatoires pour entrer dans l’Enseignement catholique</h5>
-                <p>Tout candidat souhaitant s’inscrire au CRPE ou au CAFEP pour entrer dans l’enseignement catholique privé sous contrat, doit obligatoirement solliciter un <b>pré-accord</b> auprès de la Commission d’accueil et d’accord collégial (CAAC) de son domicile.</p>
+                <p>Tout candidat souhaitant s’inscrire au CRPE ou au CAFEP pour entrer dans l’enseignement catholique privé sous contrat, doit obligatoirement solliciter un <b>pré-accord</b> auprès de la Commission d'accueil et d'accord collégial (CAAC) de son domicile.</p>
                 <p>Cette demande est à effectuer le plus tôt possible :</p>
                 <ul class="list-default">
                     <li>dès l’inscription en M1 ;</li>
                     <li>ou dès l’inscription au concours pour les personnes déjà titulaires d’un M1 ou d’un M2.</li>
                 </ul>
-                <p><b>Le pré-accord est un avis donné par des chefs d’établissement à l’occasion d’un entretien :</b></p>
+                <p>Le pré-accord est un avis donné par des chefs d’établissement à l’occasion d’un entretien :</p>
                 <ul class="list-default">
                     <li>
                         <p><b>si l’entretien est positif</b>, le pré-accord est délivré. <b>Après la réussite au concours</b> le professeur stagiaire <b>s’inscrit dans un ISFEC</b> afin de suivre la formation pendant son année de stage, <b>le préaccord collégial se transforme alors automatiquement en accord collégial</b></p>
-                        <p>Dans le cas où le stagiaire n’aurait pas suivi la formation, pendant l’année de stage, dans un ISFEC, il serait reçu pour un nouvel entretien par la CAAC afin d’obtenir l’accord collégial.</p>
+                        <p>Dans le cas où le stagiaire n’aurait  pas suivi la formation, pendant l’année de stage, dans un ISFEC, il serait reçu pour un nouvel entretien par la CAAC afin d’obtenir l’accord collégial.</p>
                     </li>
                     <li>
-                        <p><b>si l’entretien est négatif</b>, le pré-accord est refusé. Il est possible de faire appel de cette décision par courrier recommandé avec accusé de réception dans un délai de 60 jours à compter de la date de réception de la notification du refus. L’entretien d’appel a lieu lors de la prochaine CAAC . Le refus en appel est définitif.</p>
+                        <p><b>si l’entretien est négatif</b>, le pré-accord est refusé. Il est possible de faire appel de cette décision par courrier recommandé avec accusé de réception dans un délai de 60 jours à compter de la date de réception de la notification du refus. L'entretien d'appel a lieu lors de la prochaine CAAC . Le refus en appel est définitif.</p>
                         <p>L’accord collégial engage collectivement les Chefs d’Etablissement du réseau de l’Enseignement Catholique dans le cadre des accords nationaux sur l’emploi.</p>
 
                     </li>
                 </ul>
-            </div>
-            <div class="col-sm-5">
-                <h4 class="heading">Nous <span class="color2">contacter</span></h4>
-                <form id="main-contact-form">
-                    <div class="form-group">
-                        <label for="contact-name">Votre nom</label>
-                        <input id="contact-name" type="text" class="form-control" name="name">
-                    </div>
-                    <div class="form-group">
-                        <label for="contact-email">Votre e-mail</label>
-                        <input id="contact-email" type="text" class="form-control" name="email">
-                    </div>
-                    <div class="form-group">
-                        <label for="contact-number">Sujet</label>
-                        <input id="contact-number" type="text" class="form-control" name="subject">
-                    </div>
-                    <div class="form-group">
-                        <label for="contact-message">Votre message</label>
-                        <textarea id="contact-message" class="form-control" rows="6" name="message"></textarea>
-                    </div>
-                    <p id="status"></p>
-                    <button type="submit" name="submit" class="btn btn-primary">Envoyer</button>
-                </form>
             </div>
         </div>
     </div>
