--- a/app/Resources/views/user/registration.html.twig
+++ b/app/Resources/views/user/registration.html.twig
@@ -17,13 +17,19 @@
             <div class="col-sm-12 text-justify">
                 <h3>Votre compte est bien créé !</h3>
 
-                <p>Bonjour {{ user.firstname }} {{ user.lastname }}! Votre compte est bien créé.</p>
+                <p>Bonjour {{ user.firstname }} {{ user.lastname }} ! Votre compte est bien créé.</p>
                 <p>Pour l'activer, veuillez cliquer sur le lien que vous avez reçu à l'adresse mail {{ user.email }}</p>
 
-                <p>Vous pourrez ensuite vous authentifier sur <a href="{{ path('homepage') }}">la page d'accueil</a></p>
+                {% set datetimeStart = '2017-07-01' %}
+                {% if "now"|date('Y-m-d') >= datetimeStart|date('Y-m-d') %}
+                    <p>Vous pourrez ensuite vous authentifier sur <a href="{{ path('homepage') }}">la page d'accueil</a></p>
+                {% else %}
+                    <p>Vous serez averti prochainement de l’ouverture de la plateforme.</p>
+                {% endif %}
 
-                <p>Merci!</p>
+                <p>Merci !</p>
                 <p>L'équipe AFADEC</p>
+                <p><a class="studitBlueFC" href="mailTo:contact.afadec@gmail.com">contact.afadec@gmail.com</a></p>
             </div>
         </div>
     </div>
