--- a/app/Resources/views/user/registrationMail.html.twig
+++ b/app/Resources/views/user/registrationMail.html.twig
@@ -2,7 +2,15 @@
 
 <p>Bonjour {{ prenom }} {{ nom }}! Votre compte est bien créé.</p>
 <p>Pour l'activer, veuillez cliquer sur ce lien : <a href="{{ url }}/{{ id }}">Lien d'activation</a>
-<p>Vous pourrez ensuite vous authentifier sur <a href="{{ urlLogin }}">la page d'accueil de la plateforme AFADEC</a></p>
+
+
+{% set datetimeStart = '2017-07-01' %}
+{% if "now"|date('Y-m-d') >= datetimeStart|date('Y-m-d') %}
+    <p>Vous pourrez ensuite vous authentifier sur <a href="{{ urlLogin }}">la page d'accueil</a></p>
+{% else %}
+    <p>Vous serez averti prochainement de l’ouverture de la plateforme.</p>
+{% endif %}
 
 <p>Merci!</p>
 <p>L'équipe AFADEC</p>
+<p><a class="studitBlueFC" href="mailTo:contact.afadec@gmail.com">contact.afadec@gmail.com</a></p>
