--- a/app/Resources/views/pagesFixes/concours.html.twig
+++ b/app/Resources/views/pagesFixes/concours.html.twig
@@ -19,18 +19,18 @@
                 <p><b>Les concours externes de recrutement de professeur des écoles (CRPE)</b> pour enseigner dans l’enseignement privé catholique sont spécifiques à l’enseignement privé  mais avec les mêmes épreuves, le même programme et le même calendrier que pour l’enseignement public.</p>
                 <p>Le CRPE externe <b>s’adresse aux étudiants inscrits en master 1 ou master 2</b> ainsi qu’aux personnes qui remplissent les conditions pour s’inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
                 <p>Le concours se déroule en deux étapes : l’admissibilité et l’admission.</p>
-                <p><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98653/les-epreuves-crpe-externe-troisieme-crpe-second-crpe-interne.html">Pour voir le descriptif des épreuves du CRPE externe cliquez sur le lien.</a></p>
+                <p><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98653/les-epreuves-crpe-externe-troisieme-crpe-second-crpe-interne.html">Pour voir le descriptif des épreuves du CRPE externe cliquez sur le lien.</a></p>
                 <p><b>Le concours externe du privé</b> pour enseigner dans les collèges et lycées de l’enseignement privé sous contrat <b>s’appelle le Cafep</b> : Certificat d’aptitude aux fonctions d’enseignement dans les établissements privés sous contrat du 2nd degré. Il est l’équivalent du Capes dans le public. Il s'agit du même concours pour le public et pour le privé. C'est au moment de s’inscrire que l’on opte pour l'enseignement privé.</p>
                 <p>Le Cafep concours externe, <b>s’adresse aux étudiants inscrits en master 1 ou master 2</b> ainsi qu'aux personnes qui remplissent les conditions pour s'inscrire en deuxième année de Master et celles qui détiennent déjà un diplôme de master (ou un équivalent).</p>
                 <h5 class="color2">Quelles sont les épreuves ?</h5>
                 <ul class="list-default">
-                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98581/les-epreuves-du-capes-externe-et-du-cafep-capes-section-histoire-et-geographie.html">Les épreuves du Cafep d’histoire-géographie</a></li>
-                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98575/les-epreuves-du-capes-externe-et-du-cafep-capes-section-langues-vivantes-etrangeres.html">Les épreuves du Cafep d’anglais</a></li>
-                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98575/les-epreuves-du-capes-externe-et-du-cafep-capes-section-langues-vivantes-etrangeres.html">Les épreuves du Cafep d’espagnol</a></li>
-                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98572/les-epreuves-du-capes-externe-et-du-cafep-capes-section-mathematiques.html">Les épreuves du Cafep de mathématiques</a></li>
-                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98573/les-epreuves-du-capes-externe-et-du-cafep-capes-section-lettres.html">Les épreuves du Cafep de lettres</a></li>
-                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98569/les-epreuves-du-capes-externe-et-du-cafep-capes-section-sciences-de-la-vie-et-de-la-terre.html">Les épreuves du Cafep de SVT</a></li>
-                    <li><a class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98570/les-epreuves-du-capes-externe-et-du-cafep-capes-section-physique-chimie.html">Les épreuves du Cafep de physique-chimie</a></li>
+                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98581/les-epreuves-du-capes-externe-et-du-cafep-capes-section-histoire-et-geographie.html">Les épreuves du Cafep d’histoire-géographie</a></li>
+                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98575/les-epreuves-du-capes-externe-et-du-cafep-capes-section-langues-vivantes-etrangeres.html">Les épreuves du Cafep d’anglais</a></li>
+                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98575/les-epreuves-du-capes-externe-et-du-cafep-capes-section-langues-vivantes-etrangeres.html">Les épreuves du Cafep d’espagnol</a></li>
+                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98572/les-epreuves-du-capes-externe-et-du-cafep-capes-section-mathematiques.html">Les épreuves du Cafep de mathématiques</a></li>
+                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98573/les-epreuves-du-capes-externe-et-du-cafep-capes-section-lettres.html">Les épreuves du Cafep de lettres</a></li>
+                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98569/les-epreuves-du-capes-externe-et-du-cafep-capes-section-sciences-de-la-vie-et-de-la-terre.html">Les épreuves du Cafep de SVT</a></li>
+                    <li><a target="_blank" class="studitBlueFC" href="http://www.devenirenseignant.gouv.fr/cid98570/les-epreuves-du-capes-externe-et-du-cafep-capes-section-physique-chimie.html">Les épreuves du Cafep de physique-chimie</a></li>
                 </ul>
             </div>
             <div class="col-sm-5">
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-sm-12 text-justify">
                 <h5 class="mt-40 mb-20 color2">Où préparer les concours ?</h5>
-                <p>Les concours d’enseignement peuvent être préparés dans <a class="studitBlueFC" href="https://enseignement-catholique.fr/comment-se-former">les instituts de formation de l’enseignement catholique</a>. Adossés aux universités catholiques ils proposent des Master MEEF et une formation de qualité.</p>
+                <p>Les concours d’enseignement peuvent être préparés dans <a target="_blank" class="studitBlueFC" href="https://enseignement-catholique.fr/comment-se-former">les instituts de formation de l’enseignement catholique</a>. Adossés aux universités catholiques ils proposent des Master MEEF et une formation de qualité.</p>
                 <h5 class="mt-40 mb-20 color2">Pré-accord puis accord sont obligatoires pour entrer dans l’Enseignement catholique</h5>
                 <p>Tout candidat souhaitant s’inscrire au CRPE ou au CAFEP pour entrer dans l’enseignement catholique privé sous contrat, doit obligatoirement solliciter un <b>pré-accord</b> auprès de la Commission d'accueil et d'accord collégial (CAAC) de son domicile.</p>
                 <p>Cette demande est à effectuer le plus tôt possible :</p>
